--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -7,5 +9,19 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    width: 100%;
     background-size: cover;
+    display: flex;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    display: inline;
+}
+
+ul li a {
+    color: #fff;
 }
