--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -14,23 +14,21 @@ body {
     display: flex;
 }
 
-ul {
-    list-style-type: none;
+.container{
+    overflow:auto;
+    display: flex;
+}
+  
+nav {
+    display: flex;
 }
 
-li {
-    display: inline;
-    width: 25%;
-}
 
-ul li a {
+  
+ul li{
+    display: inline-block;
+    padding:10px;
+    font-size:20px;
     color: #fff;
-    text-transform: uppercase;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-decoration: none;
 }
 
-ul li a span {
-    font-weight: bold;
-    
-}
