--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,34 +1,65 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-image: url(../assets/home/background-home-desktop.jpg);
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    background-image: url('../assets/home/background-home-desktop.jpg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 100vh;
     width: 100%;
-    background-size: cover;
-    display: flex;
 }
 
 .container{
     overflow:auto;
     display: flex;
+    width: 100%;
 }
   
 nav {
+    margin: 0;
+    overflow: hidden;
+    height: 100px;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
     display: flex;
 }
 
-
-  
-ul li{
+nav ul li {
     display: inline-block;
-    padding:10px;
-    font-size:20px;
+    list-style-type: none;
     color: #fff;
+    padding-top: 15px;
 }
 
+nav ul .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 25px;
+}
+
+nav ul li a {
+    color: white;
+    display: block;
+    line-height: 3em;
+    padding: 10px;
+    text-decoration: none;
+}
+
+  nav ul li:first-child {
+    margin-right: auto;
+}
+
+nav ul li a:hover {
+   text-decoration: underline;
+  }
