--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -29,37 +29,37 @@ nav {
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
     display: flex;
+    padding-right: 3%;
+    padding-top: 5%;
 }
 
 nav ul li {
     display: inline-block;
     list-style-type: none;
     color: #fff;
-    padding-top: 15px;
+    padding-left: 5%;
+    
 }
 
 nav ul .logo {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 25px;
-}
+    padding-left: 20px;
+} 
 
 nav ul li a {
     color: white;
     display: block;
     line-height: 3em;
-    padding: 10px;
     text-decoration: none;
 }
 
-  nav ul li:first-child {
+nav ul li:first-child {
     margin-right: auto;
 }
 
 nav ul li a:hover {
-   text-decoration: underline;
-  }
+border-bottom: 1px solid #fff;
+ }
