--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -20,18 +20,21 @@ body {
     overflow:auto;
     display: flex;
     width: 100%;
+    height: 100%;
 }
   
 nav {
-    margin: 0;
+    margin: 0 ;
     overflow: hidden;
-    height: 100px;
+    max-height: 100vh;
+    position: relative;
 }
 
 nav ul {
     display: flex;
-    padding-right: 3%;
-    padding-top: 5%;
+    padding-right: 12%;
+    padding-top: 3.5%;
+    margin-bottom: 20px;
 }
 
 nav ul li {
@@ -46,8 +49,10 @@ nav ul .logo {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 45px;
 } 
+
+
 
 nav ul li a {
     color: white;
@@ -62,4 +67,33 @@ nav ul li:first-child {
 
 nav ul li a:hover {
 border-bottom: 1px solid #fff;
+ }
+
+ .left-text {
+    color: #fff;
+    width: 400px;
+    margin-top: 200px;
+    margin-left: 11%;
+    position: absolute;
+ }
+
+ .left-text h1{
+    text-transform: uppercase;
+    font-size: 120px;
+
+ }
+
+ .left-text h2 {
+    text-transform: uppercase;
+ }
+
+ .right-btn {
+    position: absolute;
+    right: 10%;
+    margin-top: 250px;
+ }
+
+ button {
+    border: none;
+    padding: 150px;
  }
