--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -83,17 +85,23 @@ border-bottom: 1px solid #fff;
 
  }
 
- .left-text h2 {
+ .left-text p {
     text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
  }
 
  .right-btn {
     position: absolute;
-    right: 10%;
-    margin-top: 250px;
+    right: 12.5%;
+    margin-top: 275px;
  }
 
  button {
     border: none;
-    padding: 150px;
+    padding: 100px 50px 100px 50px;
+    border-radius: 50%;
+    font-size: 50px;
  }
