--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap');
 
 * {
     box-sizing: border-box;
@@ -82,16 +82,17 @@ border-bottom: 1px solid #fff;
  .left-text h1{
     text-transform: uppercase;
     font-size: 120px;
-
+    font-family: 'Barlow', sans-serif;
  }
 
- .left-text p {
+ .left-text h4 {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 20px;
     margin-bottom: 10px;
-    font-family: 'Roboto Condensed', sans-serif;
- }
+    font-family: 'Barlow', sans-serif;
+    color: rgb(233, 233, 233);
+}
 
  .right-btn {
     position: absolute;
