--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap');
 
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -30,21 +29,23 @@ nav {
     overflow: hidden;
     max-height: 100vh;
     position: relative;
+    width: 100%;
 }
 
 nav ul {
     display: flex;
-    padding-right: 12%;
     padding-top: 3.5%;
     margin-bottom: 20px;
+    width: 100%;
+    padding-right: 20px;
 }
 
 nav ul li {
     display: inline-block;
     list-style-type: none;
     color: #fff;
-    padding-left: 5%;
-    
+    padding-left: 1%;
+    background: transparent;
 }
 
 nav ul .logo {
@@ -100,9 +101,16 @@ border-bottom: 1px solid #fff;
     margin-top: 275px;
  }
 
- button {
+ .btn {
     border: none;
     padding: 100px 50px 100px 50px;
     border-radius: 50%;
     font-size: 50px;
+    cursor: pointer;
  }
+
+ .btn:hover {
+    background: rgb(154, 150, 150);
+ }
+
+ 
