--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap');
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -17,11 +18,11 @@ body {
     width: 100%;
 }
 
-.container{
-    overflow:auto;
+.navigation{
+    overflow: hidden;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100px;
 }
   
 nav {
@@ -37,7 +38,9 @@ nav ul {
     padding-top: 3.5%;
     margin-bottom: 20px;
     width: 100%;
-    padding-right: 20px;
+    padding-right: 40px;
+    position: fixed;
+    height: 100px;
 }
 
 nav ul li {
