--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -1,79 +1,90 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap');
 
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-
 body {
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
-    background-image: url('../assets/home/background-home-desktop.jpg');
-    background-repeat: no-repeat;
+	font-family: 'Montserrat', sans-serif;
+	line-height: 1.6;
+	min-height: 100vh;
+    background-image: url(../assets/home/background-home-desktop.jpg);
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    width: 100%;
 }
 
-.navigation{
-    overflow: hidden;
-    display: flex;
-    width: 100%;
-    height: 100px;
+.header,
+.main-nav {
+	display: flex;
 }
-  
-nav {
-    margin: 0 ;
-    overflow: hidden;
-    max-height: 100vh;
-    position: relative;
-    width: 100%;
+.header {
+	flex-direction: row;
+	align-items: center;
+    justify-content: space-between;
 }
-
-nav ul {
-    display: flex;
-    padding-top: 3.5%;
-    margin-bottom: 20px;
-    width: 100%;
-    padding-right: 40px;
-    position: fixed;
-    height: 100px;
+    .header{
+	width: 100%;
+	margin: 0 auto;
 }
 
-nav ul li {
-    display: inline-block;
-    list-style-type: none;
-    color: #fff;
-    padding-left: 1%;
-    background: transparent;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-nav ul .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 45px;
-} 
 
-
-
-nav ul li a {
-    color: white;
-    display: block;
-    line-height: 3em;
-    text-decoration: none;
+h2,
+h3,
+a {
+	color: #ffffff;
 }
 
-nav ul li:first-child {
-    margin-right: auto;
+a {
+	text-decoration: none;
 }
 
-nav ul li a:hover {
-border-bottom: 1px solid #fff;
- }
+
+
+.logo {
+	margin: 0;
+	font-size: 1.45em;
+}
+
+.main-nav {
+	margin-top: 5px;
+
+}
+.logo a,
+.main-nav a {
+	padding: 10px 15px;
+	text-transform: uppercase;
+	text-align: center;
+	display: block;
+}
+
+.main-nav a {
+	color: #ffffff;
+	font-size: .99em;
+}
+
+.main-nav a:hover {
+	border-bottom: 1px solid #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  .left-text {
     color: #fff;
