--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -31,6 +31,8 @@ nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    padding-right: 3%;
+    background: transparent;
 }
 
 
