--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -31,8 +31,8 @@ nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-right: 3%;
-    background: transparent;
+    margin-right: 3%;
+    align-items: center;
 }
 
 
@@ -40,6 +40,8 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  height: 10vh;
+  padding-top: 1%;
 }
 
 
@@ -52,6 +54,7 @@ a {
 a {
 	text-decoration: none;
     padding: 15px 0px 32px 0px;
+    margin-left: 5rem;
 }
 
 
@@ -62,26 +65,26 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 15px;
+    padding: 10px 15px 0px 30px;
 	display: block;
 }
 
 .border-bottom {
-    border-bottom: 1px solid #fff;
-    width: 30%;
-    margin-top: 2.5%;
+    border-bottom: 1px solid rgb(71, 70, 70);
+    width: 37%;
     position: absolute;
     z-index: 2;
-    left: 20%;
+    left: 10%;
 }
 
 .main-nav {
 	margin-top: 5px;
-    backdrop-filter: blur(40px);
+    backdrop-filter: blur(100px);
     position: relative;
     z-index: 1;
-    width: 53%;
+    width: 56%;
     right: -3%;
+    height: 100%;
 }
 .logo a,
 .main-nav a {
@@ -94,6 +97,11 @@ a {
 .main-nav a {
 	color: #ffffff;
 	font-size: .99em;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.main-nav a span {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .main-nav a:hover {
