--- a/space-tourism-website-main/starter-code/assets/destination/style.css
+++ b/space-tourism-website-main/starter-code/assets/destination/style.css
@@ -105,11 +105,8 @@ a {
     width: 50%;
     position: absolute;
     display: block;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     left: 0;
-    padding-left: 10%;
+    margin-left: 15%;
 }
 
 .left-text h3 {
@@ -119,8 +116,7 @@ a {
 }
 
 .left-text img {
-    width: 60%;
-    height: 60%;
+    
 }
 
 .right-text {
