--- a/space-tourism-website-main/starter-code/assets/destination/style.css
+++ b/space-tourism-website-main/starter-code/assets/destination/style.css
@@ -43,7 +43,7 @@ ul {
 }
 
 
-a {
+.header-nav {
 	text-decoration: none;
     padding: 15px 0px 32px 0px;
     margin-left: 5rem;
@@ -76,7 +76,7 @@ a {
     position: relative;
     z-index: 1;
     width: 56%;
-    right: -3%;
+    right: -2%;
     height: 100%;
 }
 .logo a,
@@ -106,18 +106,21 @@ a {
     position: absolute;
     display: block;
     left: 0;
-    margin-left: 14%;
+    margin-left: 11%;
 }
 
 .left-text h3 {
     color:#fff;
     height: 150px;
     width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 22px;
 }
 
 .left-text img {
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
     margin-left: 10%;
 }
 
@@ -126,4 +129,22 @@ a {
     position: absolute;
     right: 0%;
     color: #fff;
+}
+
+.right-text ul li {
+    padding-right: 20px;
+}
+
+.small-nav {
+    display: flex;
+}
+
+.desti-nav{
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+
+.desti-nav:hover {
+    border-bottom: 1px solid #fff;
 }
