--- a/space-tourism-website-main/starter-code/assets/destination/style.css
+++ b/space-tourism-website-main/starter-code/assets/destination/style.css
@@ -138,6 +138,18 @@ ul {
     padding-left: 6.8%;
 }
 
+.right-text h1 {
+    text-transform: uppercase;
+    font-size: 75px;
+}
+
+.big-text {
+    width: 60%;
+    letter-spacing: 1px;
+    line-height: 25px;
+    font-size: 12px;
+}
+
 .right-text ul li {
     padding-right: 20px;
 }
