--- a/space-tourism-website-main/starter-code/assets/crew/style.css
+++ b/space-tourism-website-main/starter-code/assets/crew/style.css
@@ -7,7 +7,7 @@
 	font-family: 'Montserrat', sans-serif;
 	line-height: 1.6;
 	min-height: 100vh;
-    background-image: url(./background-crew-desktop.jpg);
+    background-image: url(../crew/background-crew-desktop.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
