--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -66,7 +66,7 @@ a {
 }
 
 .border-bottom {
-    border-bottom: 1px solid rgb(71, 70, 70);
+    border-bottom: 2px solid rgb(108, 107, 107);
     width: 37%;
     position: absolute;
     z-index: 2;
@@ -155,4 +155,16 @@ a {
     background: rgb(154, 150, 150);
  }
 
- 
+ @media(max-width: 1400px) {
+    .main-nav {
+        padding-right: 50px;
+        font-size: 0.75em;
+    }
+ }
+
+ @media(max-width: 1230px) {
+    .main-nav {
+        padding-right: 50px;
+        font-size: 0.55em;
+    }
+ }
