--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -221,6 +221,10 @@ a {
         
     }
 
+    .left-text h1 {
+        font-size: 75px;
+    }
+
     .left-text h4 {
         font-size: 15px;
         margin-top: -40%;
@@ -232,12 +236,12 @@ a {
     }
 
     .right-btn {
-        padding: 175px 50px 0px 0px;
+        padding: 225px 50px 0px 0px;
 
     }
 
     .btn {
-        padding: 50px 25px 50px 25px;
+        padding: 80px 40px 80px 40px;
         font-size: 40px;
     }
 }
