--- a/space-tourism-website-main/starter-code/style/style.css
+++ b/space-tourism-website-main/starter-code/style/style.css
@@ -236,7 +236,7 @@ a {
     }
 
     .right-btn {
-        padding: 225px 50px 0px 0px;
+        padding: 50% 10% 0 0;
 
     }
 
@@ -244,5 +244,23 @@ a {
         padding: 80px 40px 80px 40px;
         font-size: 35px;
         font-weight: lighter;
+    }
+}
+
+@media(min-height: 600px) {
+
+    .left-text h1 {
+        font-size: 50px;
+    }
+
+    .left-text h4 {
+        font-size: 12px;
+        margin-top: -75%;
+        left: 10%;
+    }
+
+    .right-btn {
+        padding: 15% 10% 0 0;
+
     }
 }
